# Proyecto-UE5-Fast-Startup-Accelerator

./: INSTALL.bat  LICENSE  README.md  analysis_ue5.json  engine_startup.uefast
docs/: architecture.md  usage.md
rust-analyzer/: Cargo.toml  build.rs  turbo_cache.uefast
rust-analyzer/asm/: hash_simd.asm  memcpy_fast.asm  scan_chunk.asm
rust-analyzer/src/: analyzer.rs  asm_bindings.rs  cache.rs  graph.rs  hash.rs  lib.rs  main.rs  scanner.rs  uasset.rs
ue5-plugin/: FastStartup.uplugin
ue5-plugin/Config/: DefaultFastStartup.ini
ue5-plugin/Scripts/: BuildProjectCache.bat  Setup-FastStartup.ps1
ue5-plugin/Source/FastStartup/: FastStartup.Build.cs
ue5-plugin/Source/FastStartup/Private/: FastStartupCommands.cpp  FastStartupModule.cpp  FastStartupStyle.cpp  FastStartupWidget.cpp
ue5-plugin/Source/FastStartup/Public/: FastStartupCommands.h  FastStartupModule.h  FastStartupStyle.h  FastStartupWidget.h
ue5-plugin/Source/FastStartupCore/: FastStartupCore.Build.cs
ue5-plugin/Source/FastStartupCore/Private/: FastStartupCore.cpp
ue5-plugin/Source/FastStartupCore/Public/: FastStartupCore.h
