[package]
name = "ue5-fast-startup"
version = "0.1.0"
edition = "2021"
authors = ["Eddi Andreé Salazar Matos"]
description = "High-performance asset analyzer and startup accelerator for Unreal Engine 5"
license = "Apache-2.0"
repository = "https://github.com/AndreeSalazar/ue5-fast-startup-accelerator"
keywords = ["unreal-engine", "ue5", "performance", "assets", "startup"]
categories = ["command-line-utilities", "development-tools"]

[features]
default = []
asm_hotpaths = []

[lib]
name = "ue5_fast_startup"
path = "src/lib.rs"

[[bin]]
name = "ue5-fast-startup"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4.4", features = ["derive"] }

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Parallel processing
rayon = "1.8"

# File system
walkdir = "2.4"
memmap2 = "0.9"
notify = "6.1"

# Hashing
xxhash-rust = { version = "0.8", features = ["xxh3", "xxh64"] }

# Graph
petgraph = "0.6"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Progress
indicatif = "0.17"

# Time
chrono = { version = "0.4", features = ["serde"] }

[build-dependencies]
cc = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 1
